# rust-erbium

./: .gitignore  Cargo.toml  README.md  SECURITY.md  STATUS_FINAL.md
.github/: FUNDING.yml
.github/workflows/: ci-build.yml  ci-security-scan.yml  ci-test-matrix.yml  ci.yml  pr-checks.yml
config/: bootstrap_nodes.toml  devnet.toml  gas.toml  mainnet.toml
config/genesis/: README.md  allocations.toml
contracts/ethereum/: ErbiumBridge.abi  ErbiumBridge.sol  TokenWrapper.abi
docs/: API_REFERENCE.md  API_TESTING.md  BRIDGES.md  CLOUD_DEPLOYMENT.md  SECURITY.md  Whitepapper.odt
docs/references/: api-rest.md  architecture.md  ci-cd-workflows.md  core.md  crypto.md  deployment.md  dex.md  layer2.md  privacy.md  troubleshooting.md  vm.md
scripts/: benchmark_performance.sh  deploy.sh  install_dependencies.ps1  install_dependencies.sh  test_api_linux.sh  test_api_windows.ps1  test_genesis.rs
src/: constants.rs  lib.rs  main.rs
src/analytics/: anomaly_detection.rs  health_scoring.rs  mod.rs  monitoring.rs  predictive.rs
src/api/: graphql.rs  mod.rs  rest.rs  rpc.rs  websocket.rs
src/benchmarking/: load_testing.rs  metrics_collector.rs  mod.rs  profiling.rs  tps_benchmark.rs
src/bridges/: adapter.rs  core.rs  mod.rs  transaction_builder.rs  types.rs
src/compliance/: automated_checking.rs  frameworks.rs  kyc_aml.rs  mod.rs  remediation.rs  reporting.rs  risk_assessment.rs
src/consensus/: cross_region.rs  mod.rs  pos.rs  rewards.rs  sequence_integrity.rs  slashing.rs  validator.rs
src/core/: block.rs  chain.rs  dex.rs  erbium_engine.rs  layer2.rs  mempool.rs  mod.rs  parallel_processing.rs  precompiles.rs  state.rs  state_pruning.rs  transaction.rs  transaction_templates.rs  types.rs  units.rs  vm.rs
src/crypto/: dilithium.rs  hashing.rs  keys.rs  mod.rs  signatures.rs  simd.rs  zk_proofs.rs
src/distributed/: distributed_cache.rs  load_balancer.rs  mod.rs  replication.rs  sharding.rs
src/governance/: dao.rs  mod.rs  proposals.rs  treasury.rs  voting.rs
src/gpu/: mod.rs
src/ml/: optimizer.rs
src/network/: dht.rs  discovery.rs  (+9 more)
tests/: integration.rs
(+105 files in other folders)
